--- a/src/BackendBundle/Resources/views/TimeTracking/timeList.html.twig
+++ b/src/BackendBundle/Resources/views/TimeTracking/timeList.html.twig
@@ -1,3 +1,4 @@
+{% spaceless %}
 <table class="table table-bordered table-hover">
     <thead>
         <tr>
@@ -35,3 +36,4 @@
         {% endfor %}
     </tbody>
 </table>
+{% endspaceless %}
