--- a/src/BackendBundle/Resources/views/TimeTracking/index.html.twig
+++ b/src/BackendBundle/Resources/views/TimeTracking/index.html.twig
@@ -91,8 +91,10 @@
     });
     {% if time_track.startTime is not empty %}
         clock.setTime({{time_track.workedTime}});
+        $(".continue-time").addClass('hidden');
     {% else %}
         clock.stop();
+        $(".continue-time").removeClass('hidden');
     {% endif %}
 
     $("#backendbundle_time_track_type_taskId").select2({
@@ -155,6 +157,7 @@
                     url: "{{ path('backend_time_tracking_start_time') }}",
                     dataType: 'json',
                     data: $("#form-time").serialize(),
+                    async: false,
                     success: function (resp)
                     {
                         $("#start-time").removeAttr('disabled');
@@ -165,6 +168,7 @@
                             $("#stop-time").attr('time-id', resp.timeId)
                             clock.setTime(0);
                             clock.start();
+                            $(".continue-time").addClass('hidden');
                         } else {
                             bootbox.alert(resp.msg);
                         }
@@ -208,8 +212,8 @@
                         clock.stop();
                         $("#backendbundle_time_track_type_taskId").select2("val", "");
                         $("#backendbundle_time_track_type_description").val('');
-                        
                         updateTimeList();
+                        $(".continue-time").removeClass('hidden');
                     } else {
                         bootbox.alert(resp.msg);
                     }
@@ -270,4 +274,36 @@
             });
         } 
     });
+    
+    
+    {# Codigo para iniciar contadores de registros de tiempo existentes #}
+    $( "#time-list" ).on( "click", ".continue-time", function( event ) {
+        var object = $(this);
+        var timeId = object.attr('time-id');
+        var itemId = object.attr('item-id');
+        var projectId = object.attr('project-id');
+        
+        if (timeId != '') {
+            
+            var currentProject = $("#backendbundle_time_track_type_project").val();
+            
+            if (currentProject != projectId) {
+                $("#backendbundle_time_track_type_project").val(projectId);
+                $("#backendbundle_time_track_type_project").trigger('change');
+            }
+            
+            if (itemId != '') {
+                $("#backendbundle_time_track_type_taskId").val(itemId);
+                
+            } else {
+                var description = $("#description-time-"+timeId).html();
+                $("#backendbundle_time_track_type_description").val(description);
+            }
+            
+            if (!$("#start-time").hasClass('hidden')) {
+                $("#start-time").trigger('click');
+            }
+        }
+    });
+    
 {% endblock %}
