--- a/src/BackendBundle/Resources/views/TimeTracking/timeList.html.twig
+++ b/src/BackendBundle/Resources/views/TimeTracking/timeList.html.twig
@@ -15,7 +15,7 @@
         {% for time in time_tracking %}
             <tr>
                 <td>{{ time.date|date(dateFormat) }}</td>
-                <td>{{ time }}</td>
+                <td id='description-time-{{time.id}}'>{{ time }}</td>
                 <td>{{ time.project.name }}</td>
                 <td>
                     {{ time.getTimeOnNaturalLanguage }}
@@ -24,7 +24,10 @@
                     {{ time.startTime|date(hourFormat) }} / {{ time.endTime|date(hourFormat) }}
                 </td>
                 <td>
-                    <a class="btn btn-danger btn-md delete-time" time-id="{{time.id}}" title="" href="javascript:void(0);">
+                    <a class="btn btn-success btn-md continue-time" title="{{'backend.time_tracking.start_task'|trans}}" time-id="{{time.id}}" item-id="{% if time.item is not empty %}{{time.item.id}}{% endif %}" project-id="{{time.project.id}}" href="javascript:void(0);">
+                        <i class="fa fa-play"></i>
+                    </a>&nbsp;
+                    <a class="btn btn-danger btn-md delete-time" title="{{'backend.global.delete'|trans}}" time-id="{{time.id}}" href="javascript:void(0);">
                         <i class="fa fa-times"></i>
                     </a>
                 </td>
