--- a/src/BackendBundle/Resources/public/css/style.css
+++ b/src/BackendBundle/Resources/public/css/style.css
@@ -301,3 +301,14 @@ span.label-notification {
 .no-border {
     border: none;
 }
+
+span.time-title {
+    font-size: 15px;
+    font-weight: bold;
+}
+
+span.worked-time-day {
+    font-size: 15px;
+    font-style: italic;
+    margin-left: 15px;
+}
