--- a/src/BackendBundle/Resources/views/Default/menu.html.twig
+++ b/src/BackendBundle/Resources/views/Default/menu.html.twig
@@ -15,7 +15,7 @@
                         <a href="{{ path('backend_project_sprints',{'id':project.id}) }}" title="{{ 'backend.sprint.sprints'|trans }}"><i class="fa fa-fw fa-rotate-right fa-2x"></i> <span class="nav-title hidden">{{ 'backend.sprint.sprints'|trans }}</span></a>
                     </li>
                     <li {% if menu is defined and menu == 'menu_project_reports' %}class="active"{% endif %}>
-                        <a href="#"><i class="fa fa-fw fa-file fa-2x" title="{{ 'backend.report.reports'|trans }}"></i> <span class="nav-title hidden">{{ 'backend.report.reports'|trans }}</span></a>
+                        <a href="{{ path('backend_project_reports',{'id':project.id}) }}"><i class="fa fa-fw fa-file fa-2x" title="{{ 'backend.report.reports'|trans }}"></i> <span class="nav-title hidden">{{ 'backend.report.reports'|trans }}</span></a>
                     </li>
                     <li {% if menu is defined and menu == 'menu_project_team' %}class="active"{% endif %}>
                         <a href="{{ path('backend_project_team', { 'id': project.id }) }}" title="{{ 'backend.user_project.project_team'|trans }}"><i class="fa fa-fw fa-users fa-2x"></i> <span class="nav-title hidden">{{ 'backend.user_project.project_team'|trans }}</span></a>
