--- a/src/BackendBundle/Resources/public/css/style.css
+++ b/src/BackendBundle/Resources/public/css/style.css
@@ -321,3 +321,21 @@ a.edit-track-time {
     padding: 6px 8px;
     margin-right: 8px;
 }
+
+div.clock-main {
+    cursor: pointer;
+}
+
+div.clock-main ul.flip {
+    cursor: pointer;
+}
+
+div.clock-main ul.flip .flip-clock-before, div.clock-main ul.flip .flip-clock-active, 
+div.clock-main ul.flip .flip-clock-active .up, div.clock-main ul.flip .flip-clock-active .down{
+    cursor: pointer;
+}
+
+div.clock-main span.flip-clock-dot {
+    width: 5px;
+    height: 5px;
+}
