--- a/src/BackendBundle/Resources/views/Default/header.html.twig
+++ b/src/BackendBundle/Resources/views/Default/header.html.twig
@@ -8,6 +8,9 @@
             <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="{{ path('backend_homepage') }}">Agile SCRUM</a>
+        <div class="col-xs-3 text-center no-padding-sides">
+            <div class="clock clock-main" onclick="javascript: window.location.href='{{path('backend_time_tracking')}}'"></div>
+        </div>
     </div>
     <!-- Top Menu Items -->
     <ul class="nav navbar-right top-nav">
