--- a/src/BackendBundle/Resources/views/Project/Report/PDF/projectReport.html.twig
+++ b/src/BackendBundle/Resources/views/Project/Report/PDF/projectReport.html.twig
@@ -1,25 +1,13 @@
-{% extends 'BackendBundle:Default:main.html.twig' %}
-{% block title %}{{'backend.report.reports'|trans}}{% endblock %}
+{% extends 'BackendBundle:Project:pdfMain.html.twig' %}
 
 {% block content %}
-    <!-- Page Heading -->
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">
-                {{'backend.report.project'|trans}}
-                <a href="{{ path('backend_project_reports', {'id':project.id}) }}" class="btn btn-default pull-right">{{'backend.global.back'|trans}}</a>
+                {{'backend.report.project'|trans}} - {{project.name}}
             </h1>
-
-            {% set item2 = {'text': project.name, 'url':path('backend_projects_view',{'id':project.id}),'icon':'fa fa-dashboard'} %}
-            {% set item3 = {'text': 'backend.report.reports'|trans, 'url':path('backend_project_reports',{'id':project.id}),'icon':'fa fa-file-text-o'} %}
-            {% set item4 = {'text': 'backend.report.project'|trans, 'icon':'fa fa-list'} %}
-            {% set items = [item2, item3, item4] %}
-            {{ filters.breadcrum(items) }}
         </div>
     </div>
-    <!-- /.row -->
-    {{ filters.showMessage('messageSuccess', 'success')}}
-    {{ filters.showMessage('messageError', 'danger')}}
 
     <!-- Seteo de variables que se reutilizan -->
     {% set tt = totalItems | length %}
@@ -50,7 +38,7 @@
 
     <!-- Tabla con consultas hechas a la base de datos -->
     <div class="row">
-        <div class="col-lg-6">
+        <div class="col-md-6">
             <h2>{{'backend.report.data.data1'|trans}}</h2>
             <div class="table-responsive">
                 <table class="table table-bordered table-hover table-striped">
@@ -61,7 +49,6 @@
                             <th>{{'backend.report.data.sum'|trans}}</th>
                         </tr>
                     </thead>
-
                     <tbody>
                         <tr>
                             <td>TT</td>
@@ -169,14 +156,25 @@
                         </tr>
 
                     </tbody>
-
                 </table>
             </div>
         </div>
+    </div>
 
-        <!-- Tabla con los calculos respetivos a las consultas --
-        -- realizadas previamente -->
-        <div class="col-lg-6">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <!-- Tabla con los calculos respetivos a las consultas --
+    -- realizadas previamente -->
+    <div class="row">
+        <div class="col-md-6">
             <h2>{{'backend.report.metric.metrics'|trans}}</h2>
             <div class="table-responsive">
                 <table class="table table-bordered table-hover table-striped">
@@ -331,7 +329,7 @@
 
                         <tr>
                             <th title="{{'backend.report.metric.form'|trans}}: (ECP/DC)*100">{{'backend.report.metric.cicleOneFix'|trans}}</th>
-                                {#                            <td>(ECP/DC)*100</td>#}
+                            <td>(ECP/DC)*100</td>
                             <td>>={{ limCycleErr }}%</td>
                             {% if dc %}
                                 {% if ((ecp / dc) * 100) >= limCycleErr %}
@@ -351,10 +349,5 @@
             </div>
         </div>
     </div>
-
-    <div class="col-lg-12">
-        <h1>
-            <a href="{{ path('backend_project_reports_project_pdf', {'id':project.id}) }}" class="btn btn-primary pull-right">{{'backend.report.pdf'|trans}}</a>
-        </h1>
-    </div>
+</div>
 {% endblock %}
