--- a/src/BackendBundle/Resources/views/Project/Report/PDF/userReport.html.twig
+++ b/src/BackendBundle/Resources/views/Project/Report/PDF/userReport.html.twig
@@ -1,25 +1,14 @@
-{% extends 'BackendBundle:Default:main.html.twig' %}
-{% block title %}{{'backend.report.reports'|trans}}{% endblock %}
+{% extends 'BackendBundle:Project:pdfMain.html.twig' %}
 
 {% block content %}
     <!-- Page Heading -->
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">
-                {{'backend.report.users'|trans}}
-                <a href="{{ path('backend_project_reports_user', {'id':project.id}) }}" class="btn btn-default pull-right">{{'backend.global.back'|trans}}</a>
+                {{'backend.report.users'|trans}} - {{project.name}}
             </h1>
-
-            {% set item2 = {'text': project.name, 'url':path('backend_projects_view',{'id':project.id}),'icon':'fa fa-dashboard'} %}
-            {% set item3 = {'text': 'backend.report.reports'|trans, 'url':path('backend_project_reports',{'id':project.id}),'icon':'fa fa-file-text-o'} %}
-            {% set item4 = {'text': 'backend.report.users'|trans, 'icon':'fa fa-users'} %}
-            {% set items = [item2, item3, item4] %}
-            {{ filters.breadcrum(items) }}
         </div>
     </div>
-    <!-- /.row -->
-    {{ filters.showMessage('messageSuccess', 'success')}}
-    {{ filters.showMessage('messageError', 'danger')}}
 
     <!-- Seteo de variables que se reutilizan -->
     {% set ta = assignedTasks | length %}
@@ -38,18 +27,6 @@
     {% set limEst = 10 %}
     {% set limDefect = 0.25 %}
 
-    {% if userSelect != "all" %}
-        {% set usr = userSelect.id%}
-    {% else %}
-        {% set usr = userSelect %}
-    {% endif %}
-
-    {% if sprintSelect != "all" %}
-        {% set sprint = sprintSelect.id %}
-    {% else %}
-        {% set sprint = sprintSelect %}
-    {% endif %}
-
     <div class="row">
         <div class="col-lg-6">
             <div class="table-responsive">
@@ -57,19 +34,11 @@
                     <thead>
                         <tr>
                             <th>{{'backend.report.userName'|trans}}</td>
-                                {% if userSelect != "all" %}
-                                <td>{{ userSelect.name }} {{ userSelect.lastname }}</td>
-                            {% else %}
-                                <td>{{ 'backend.report.userAll'|trans }}</td>
-                            {% endif %}
+                            <td>{{ userSelect }}</td>
                         </tr>
                         <tr>
                             <th>{{'backend.report.sprintName'|trans}}</td>
-                                {% if sprintSelect != "all" %}
-                                <td>{{ sprintSelect.name }}</td>
-                            {% else %}
-                                <td>{{ 'backend.report.sprintAll'|trans }}</td>
-                            {% endif %}
+                            <td>{{ sprintSelect }}</td>
                         </tr>
                     </thead>
                 </table>
@@ -89,12 +58,14 @@
                             <th>{{'backend.report.data.sum'|trans}}</th>
                         </tr>
                     </thead>
+
                     <tbody>
                         <tr>
                             <td>TA</td>
                             <td>{{'backend.report.user.ta'|trans}}</td>
                             <td>{{ ta }}</td>
                         </tr>
+
                         <tr>
                             <td>TR</td>
                             <td>{{'backend.report.user.tr'|trans}}</td>
@@ -106,11 +77,13 @@
                             <td>{{'backend.report.user.te'|trans}}</td>
                             <td>{{ te | number_format(1) }} Hrs</td>
                         </tr>
+
                         <tr>
                             <td>TD</td>
                             <td>{{'backend.report.user.td'|trans}}</td>
                             <td>{{ td | number_format(1) }} Hrs</td>
                         </tr>
+
                         <tr>
                             <td>TDD</td>
                             <td>{{'backend.report.user.tdd'|trans}}</td>
@@ -122,33 +95,52 @@
                             <td>{{'backend.report.user.dd'|trans}}</td>
                             <td>{{ dd }}</td>
                         </tr>
+
                         <tr>
                             <td>ECP</td>
                             <td>{{'backend.report.user.ecp'|trans}}</td>
                             <td>{{ ecp }}</td>
                         </tr>
+
                         <tr>
                             <td>ECS</td>
                             <td>{{'backend.report.user.ecs'|trans}}</td>
-                            <td>{{ ecs }}</td>
+                            <td class="warning">{{ ecs }}</td>
                         </tr>
+
                         <tr>
                             <td>ECT</td>
                             <td>{{'backend.report.user.ect'|trans}}</td>
                             <td  class="warning">{{ ect }}</td>
                         </tr>
+
                         <tr>
                             <td>ECC</td>
                             <td>{{'backend.report.user.ecc'|trans}}</td>
                             <td class="danger">{{ ecc }}</td>
                         </tr>
+
                     </tbody>
+
                 </table>
             </div>
         </div>
+    </div>
 
-        <!-- Tabla con los calculos respetivos a las consultas --
-        -- realizadas previamente -->
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <!-- Tabla con los calculos respetivos a las consultas --
+    -- realizadas previamente -->
+    <div class="row">
         <div class="col-lg-6">
             <h2>{{'backend.report.metric.metrics'|trans}}</h2>
             <div class="table-responsive">
@@ -225,24 +217,4 @@
             </div>
         </div>
     </div>
-
-    <div class="col-lg-12">
-        <h1>
-            {#            <a href="{{ path('backend_project_reports_user_sprint_pdf', {'id': project.id}, {'sprint': sprint}, {'user': usr})}}" class="btn btn-primary pull-right">{{'backend.report.pdf'|trans}}</a>#}
-            <a id="pdf" class="btn btn-primary pull-right">{{'backend.report.pdf'|trans}}</a>
-            <input type="hidden" id="user" value="{{ usr }}">
-            <input type="hidden" id="sprint" value="{{ sprint }}">
-        </h1>
-    </div>
-{% endblock %}
-
-{% block scripts %}
-
-    $("#pdf").click(function () {
-        userId = $("#user").val();
-        sprintId = $("#sprint").val();
-
-        window.location.href = '{{ path('backend_project_reports_user_sprint_pdf', {'id':project.id}) }}?user_id=' + userId +'&sprint_id='+ sprintId;
-    });
-    
 {% endblock %}
